--- a/src/style.scss
+++ b/src/style.scss
@@ -1,14 +1,132 @@
 body, html {
-    font-family: "Roboto", sans-serif;
-    color:  black;
-    background: linear-gradient(to bottom, #87e0fd 0%,#53cbf1 40%,#05abe0 100%);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-image: url('../src/img/trianglify.png');
     height: 100%;
 }
 
-.logo {
-    background-image: url('img/countryRoads.jpg');
-    width: 100px;
-    height: 100px;
-    background-repeat: no-repeat;
-    background-size: contain;
-  }
+#instructions {
+    color: rgba(255, 255, 255, 0.747);
+    text-align: center;
+    font-size: 1.5em;
+    padding: 5px;
+
+    #quote {
+        margin-top: 11%;
+        font-size: 0.75em;
+        color: rgba(255, 255, 255, 0.24);
+    }
+
+    #greeting {
+        color: #fff;
+        font-size: 4em;
+        padding-top: 10%;
+        font-weight: bold;
+    }   
+}
+
+
+
+#add-note {
+    height: 40px;
+    width: 1380px;
+    padding:20px 20px;
+    display:flex;
+    align-items: center;
+    #inputText{
+        border: 2px double rgb(0, 60, 129);
+        height: 100%;
+        width: 600px;
+        font-size: 100%;
+        box-sizing: border-box;
+        margin-right: 5px;
+        border-radius: 20px;
+        padding-left: 10px;
+    }
+    #submitButton {
+        height: 100%;
+        padding: 0 40px;
+        border-radius: 20px;
+        background-color: rgb(0, 60, 129);
+        color: #bcd9eb;
+        font-size: 2em;
+    }
+
+    #submitButton:active {
+        border-radius: 20px;
+        color: rgb(0, 60, 129);
+        background-color: transparent;
+        border: 3px solid rgb(0, 60, 129);
+    }
+}
+
+#wrap-counter {
+    color: #fff;
+    text-align: right;
+    margin-left:25%;
+    font-size: 1.5em;
+    padding: 6px;
+    border: 3px solid rgb(0, 60, 129);
+    border-radius: 10px;
+
+}
+
+.wrapper {
+    overflow: auto;
+    width: auto;
+    max-width: 500px;
+    min-height: 250px;
+    background-color: #f5f7f8;
+    padding: 10px;
+    box-shadow: 3px 3px 3px grey;
+    border: 2px solid rgb(0, 60, 129);
+    border-radius: 5px;
+    display: flex;
+    position: absolute;
+    flex-direction: column;
+    #title-component {
+        display: flex;
+        //max-height: 30px;
+        min-width: 200px;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-start;
+        .title {
+            font-size: 20px;
+            margin-top: 0px;
+            margin-bottom: 10px;
+            width: 125px;
+        }
+        #button-container {
+            display: inherit;
+            right: 1px;
+            button {
+                border-radius: 5px;
+                font-size: 20px;
+                margin-left: 2px;
+            }
+            #delete-note {
+                background-color: rgb(223, 153, 153);
+            }
+            #move-note {
+                background-color: rgb(153, 172, 223);
+            }
+            #edit-note{
+                background-color: rgb(179, 223, 153);
+            }
+        }
+    }
+    .text {
+        margin-top: 0px;
+        font-size: 16px;
+        width: 240px;
+    }
+}
+
+#move-note:hover {
+    cursor:move;
+}
+
+textarea {
+    width: 100%; 
+    min-height: 50%;
+}
